# flatmessage

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: FindBoost.cmake  Testinator.cmake  VsDebugDir.cmake
docs/: Coding Style Guidelines.md
src/compiler/: CMakeLists.txt  main.cpp
src/include/ast/: ast.hpp  ast_adopted.hpp  enum.hpp  message.hpp
src/include/flatmessage/: compiler.hpp  exception.hpp  parser.hpp
src/include/flatmessage/ast/: ast.hpp  ast_adopted.hpp  printer.hpp
src/include/flatmessage/generator/: cpp_generator.hpp  generator.hpp  template_generator.hpp
src/include/flatmessage/parser/: annotation.hpp  common.hpp  error_handler.hpp  expression.hpp  expression_def.hpp
src/include/generator/: generator.hpp
src/include/parser/: comment.hpp  common.hpp  enum.hpp  expression.hpp  expression_def.hpp  message.hpp
src/lib/: CMakeLists.txt  compiler.cpp  dummy.cpp  parser.cpp
src/lib/ast/: ast_adopted.hpp  printer.cpp
src/lib/generator/: cpp_generator.cpp  template_generator.cpp  template_renderer.hpp
src/lib/parser/: annotation.hpp  config.hpp  error_handler.hpp  expression.cpp  expression.hpp  expression_def.hpp
src/test/: CMakeLists.txt  comment_parser.cpp  compiler.cpp  enum_parser.cpp  generate_cpp.cpp  main.cpp  message_parser.cpp  parse_expression.cpp  template_generator.cpp  testing.hpp
src/test/compiler_expression/: Base.cpp.expected  Base.dmp.expected  Base.hpp.expected  Base.input  CommonTypes.cpp.expected  CommonTypes.hpp.expected  CommonTypes.input  PlayerInteraction.cpp.expected  PlayerInteraction.hpp.expected  PlayerInteraction.input  cpp.template  hpp.template  merged.template
src/test/compiler_expression/include_test/: Root.hpp.expected  Root.input
src/test/compiler_expression/include_test/nested/: Include.input
src/test/generate_expression/: annotation.expect  annotation.template  data.expect  data.input  data.template  enum.expect  enum.input  enum.template  functions.expect  functions.input  functions.template  message.expect  message.input  message.template  mixed.expect  mixed.input  mixed.template
src/test/parse_expression/: annotation.expect  annotation.input  annotation_multiple.expect  annotation_multiple.input  bad_annotation_bad_identifier.expect  bad_annotation_bad_identifier.input  bad_annotation_missing_close_bracket.expect  bad_annotation_missing_close_bracket.input  bad_annotation_missing_equals.expect  bad_annotation_missing_equals.input  bad_annotation_missing_identifier.expect  bad_annotation_missing_identifier.input  bad_annotation_missing_open_bracket.expect  bad_annotation_missing_open_bracket.input  bad_annotation_missing_value.expect  bad_annotation_missing_value.input  bad_data_missing_attribute_name.expect  bad_data_missing_attribute_name.input  bad_data_missing_attribute_semicolon.expect  bad_data_missing_attribute_semicolon.input  bad_data_missing_attribute_type.expect  bad_data_missing_attribute_type.input  bad_data_missing_close_bracket.expect  bad_data_missing_close_bracket.input  bad_data_missing_name.expect  bad_data_missing_name.input  bad_data_missing_open_bracket.expect  bad_data_missing_open_bracket.input  bad_data_no_params.expect  bad_data_no_params.input  bad_enum_missing_alignment.expect  bad_enum_missing_alignment.input  bad_enum_missing_close_bracket.expect  bad_enum_missing_close_bracket.input  bad_enum_missing_colon.expect  bad_enum_missing_colon.input  bad_enum_missing_comma.expect  bad_enum_missing_comma.input  bad_enum_missing_name.expect  bad_enum_missing_name.input  (+52 more)
